--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Life Calender</title>
+    <title>Life Calendar</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" async></script>
 </head>
@@ -268,21 +268,21 @@
                     </span>
                 </label>
             </div>
-            <button type="submit ">Generate Life Calender</button>
+            <button type="submit ">Generate Life Calendar</button>
         </form>
     </div>
     <header>
-        <h2 class="title ">LIFE CALENDER</h2>
+        <h2 class="title ">LIFE CALENDaR</h2>
     </header>
     <div class="wrapper ">
         <div>
-            <div class="calender__title calender__title-horizontal ">WEEKS OF THE YEAR
-                <div class="calender__title-arrow "></div>
+            <div class="calendar__title calendar__title-horizontal ">WEEKS OF THE YEAR
+                <div class="calendar__title-arrow "></div>
             </div>
-            <div class="calender ">
-                <div class="calender__title calender__title-vertical ">
-                    <div class="calender__title-arrow "></div>YEARS OF YOUR LIFE</div>
-                <div class="calender__content ">
+            <div class="calendar ">
+                <div class="calendar__title calendar__title-vertical ">
+                    <div class="calendar__title-arrow "></div>YEARS OF YOUR LIFE</div>
+                <div class="calendar__content ">
                 </div>
             </div>
             <div class="age ">
