fixed lowercase title

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </form>
     </div>
     <header>
-        <h2 class="title ">LIFE CALENDaR</h2>
+        <h2 class="title ">LIFE CALENDAR</h2>
     </header>
     <div class="wrapper ">
         <div>
