made links open new tab

--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
         <button id="changeData">Change Your Data</button>
         <div>
             <span>Inspired By</span>
-            <a href="https://store.waitbutwhy.com/products/life-calendar-24in-x-36in">Wait But Why</a>
+            <a href="https://store.waitbutwhy.com/products/life-calendar-24in-x-36in" target="_blank">Wait But Why</a>
         </div>
         <div>
             <span>Source</span>
-            <a href="http://api.population.io/">population.io</a>
+            <a href="http://api.population.io/" target="_blank">population.io</a>
         </div>
     </footer>
 </body>
